--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 camel.springboot.name=restCamel
 serviceB.endpoint=https://postman-echo.com/post
-spring.jackson.
+spring.profiles.active=open_weather
