--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 camel.springboot.name=restCamel
-serviceB.endpoint=https://postman-echo.com/post
 spring.profiles.active=open_weather
+camel.weather.token=b14a0dc6571020d2723b5c4fa468b8ad
+camel.port=8080
+camel.endpoint.messageB=localhost:8080/rest/messageB
