--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-camel.springboot.name=restCamel
-spring.profiles.active=open_weather
-camel.weather.token=b14a0dc6571020d2723b5c4fa468b8ad
-camel.port=8080
+server.port=8081
 camel.endpoint.messageB=localhost:8080/rest/messageB
+camel.weather.token=b14a0dc6571020d2723b5c4fa468b8ad
+spring.profiles.active=open_weather
