--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
-camel.endpoint.messageB=localhost:8080/rest/messageB
+camel.endpoint.target=localhost:8080/rest/messageB
 camel.weather.token=b14a0dc6571020d2723b5c4fa468b8ad
 spring.profiles.active=open_weather
